After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737639 - Fix a few small memory leaks
Fix a few small memory leaks
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2014-09-30 03:07 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2014-09-30 21:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
bluetooth-agent: Eliminate some frees by taking a direct reference (2.98 KB, patch)
2014-09-30 03:07 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
bluetooth-agent: Fix some minor leaks (1.58 KB, patch)
2014-09-30 03:08 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2014-09-30 03:07:03 UTC
See patches.
Comment 1 Jasper St. Pierre (not reading bugmail) 2014-09-30 03:07:13 UTC
Created attachment 287415 [details] [review]
bluetooth-agent: Eliminate some frees by taking a direct reference
Comment 2 Jasper St. Pierre (not reading bugmail) 2014-09-30 03:08:09 UTC
Created attachment 287416 [details] [review]
bluetooth-agent: Fix some minor leaks

These just leak some strings.
Comment 3 Bastien Nocera 2014-09-30 09:24:42 UTC
Review of attachment 287415 [details] [review]:

Looks good.
Comment 4 Bastien Nocera 2014-09-30 09:26:34 UTC
Review of attachment 287416 [details] [review]:

Looks fine.
Comment 5 Jasper St. Pierre (not reading bugmail) 2014-09-30 21:21:37 UTC
Attachment 287415 [details] pushed as e727169 - bluetooth-agent: Eliminate some frees by taking a direct reference
Attachment 287416 [details] pushed as 8fd5409 - bluetooth-agent: Fix some minor leaks