bluetooth-agent: Eliminate some frees by taking a direct reference

https://bugzilla.gnome.org/show_bug.cgi?id=737639